# starcitizen-controller-viewer

./: .gitignore  AGENTS.md  CLAUDE.md
.beads/: issues.jsonl
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: architecture_refactor_plan.md  binding_data_complexity.md  code_style.md  controller_92t_parser_task.md  data_pipeline_plan.md  filter_bar_progress.md  project_overview.md  session_progress.md  starbinder_research.md  suggested_commands.md  task_completion.md  ux_design_strategy.md
GCO 4.5 HOSAS/: GCO 4.5 HOSAS.rewasd  layout_GCO-4-5-HOSAS.xml
apps/starbinder-reference/: MappedActions.js  index.html  keybinds.json  localisation.json  script.js  style.css
apps/viewer/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
docs/: IMPLEMENTATION_PLAN.md  README.md  REWASD_SCHEMA.md  STARCITIZEN_XML_SCHEMA.md  TRANSLATIONS_EN.md
docs/plan/: 00-overview.md  01-data-types-v2.md  02-rewasd-parser-v2.md  03-key-mappings.md  04-chain-resolver-v2.md  05-shared-components.md  06-layer-browser.md  07-action-search.md  08-mode-cheat-sheets.md  09-controller-visual.md  10-polish.md  research-01-hidden-actions.md  research-02-mode-labels.md  research-03-duplicate-actions.md  research-04-custom-descriptions.md  research-05-macro-breakdown.md  research-06-sc-context-resolution.md
docs/plans/: sc-4.7-data-update.md
docs/research/: mapping-architecture-findings.md  multi-view-system-design.md  (+1 more)
scripts/: README.md  dump-bindings.ts  extract-bindings.ts  extract-sc-data.py  generate-descriptions.ts  pyproject.toml
(+128 files in other folders)
